--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div class="title" id="title">
         <h1>Unsplash API Infinite Scroll</h1>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="Image-container" id="Image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
